--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,16 +47,13 @@ dependencies {
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutine_version"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutine_version"
 
-    /** Retrofit */
-    //implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
-    //implementation "com.squareup.retrofit2:converter-moshi:$retrofit_version"
-    //implementation "com.squareup.retrofit2:converter-gson:$retrofit_version"
-    //implementation "com.jakewharton.retrofit:retrofit2-kotlin-coroutines-adapter:$retrofit_coroutines_adapter_version"
-
     /** Retrofit / Moshi */
     implementation "com.squareup.moshi:moshi:$moshi_version"
     implementation "com.squareup.moshi:moshi-kotlin:$moshi_version"
     implementation "com.squareup.retrofit2:converter-moshi:$retrofit_version"
     implementation "com.jakewharton.retrofit:retrofit2-kotlin-coroutines-adapter:$retrofit_coroutines_adapter_version"
+
+    /** Glide */
+    implementation "com.github.bumptech.glide:glide:$glide_version"
 
 }
