--- a/build.gradle
+++ b/build.gradle
@@ -9,6 +9,7 @@ buildscript {
         moshi_version = '1.8.0'
         glide_version = '4.10.0'
         navigation_version = '2.2.1'
+        glide_version = '4.10.0'
     }
     repositories {
         google()
